--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,9 @@
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "pg": "^8.13.0",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.37.4",
     "winston": "^3.15.0"
   }
 }
