--- a/server/example.env
+++ b/server/example.env
@@ -1,3 +1,14 @@
 #SERVER
-SERVER_PORT=3000
-SERVER_HOSTNAME='localhost'
+SERVER_PORT=
+SERVER_HOSTNAME=
+
+#DB
+DB_NAME=
+DB_HOST=
+DB_PORT=
+DB_USER=
+DB_PASSWORD=
+
+#JWT
+JWT_SECRET=
+JWT_REFRESH_SECRET=
