--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.13.0",
     "pg-hstore": "^2.3.4",
+    "resend": "^4.0.0",
     "sequelize": "^6.37.4",
     "winston": "^3.15.0",
     "zod": "^3.23.8"
