--- a/server/example.env
+++ b/server/example.env
@@ -1,6 +1,12 @@
+# ENVIROMENT
+NODE_ENV=development
+
 #SERVER
 SERVER_PORT=
 SERVER_HOSTNAME=
+
+# FRONTEND URL
+APP_ORIGIN=http://localhost:5173
 
 #DB
 DB_NAME=
@@ -12,3 +18,7 @@ DB_PASSWORD=
 #JWT
 JWT_SECRET=
 JWT_REFRESH_SECRET=
+
+#RESEND
+RESEND_API_KEY=
+EMAIL_SENDER=yourdomain
