--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "clsx": "^2.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.1",
     "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
