--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-hook-form": "^7.53.1",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.27.0",
+    "zod": "^3.23.8",
     "zustand": "^5.0.1"
   },
   "devDependencies": {
